# neo4j-code-graph-agent

./: .gitignore  .pre-commit-config.yaml  CI_CD_SETUP.md  DEPLOYMENT.md  LICENSE  README.md  env.example  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.py  tools.json
.github/workflows/: ci.yml  deploy.yml
ci/: README.md
ci/config/: .pre-commit-config.yaml  requirements-dev.txt
ci/scripts/: ci-runner.sh
docs/: REFACTORING_SUMMARY.md  TEXT2CYPHER.md  TOOLS_README.md
docs/ci-cd/: CI_CD_SUMMARY.md  README.md
scripts/: Makefile  README.md  evaluate_text2cypher.py
src/: __init__.py  agent.py  app.py  config.py  database.py  llm.py  mcp_tools.py  text2cypher.py  tools.py  web_ui.py
src/components/: __init__.py  main_page.py
src/routes/: __init__.py  api.py  websocket.py
src/static/js/: formatting.js  reasoning.js  ui.js  websocket.js
tests/: README.md  __init__.py  run_tests.py  test_agent.py  test_basic.py  test_ci_cd.py  test_config.py  test_database.py  test_dynamic_schema.py  test_integration.py  test_llm.py  test_mcp_tools.py  test_schema_queries.py  test_tools.py
